--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -6,4 +6,4 @@ metadata:
     app: bookmark-service
 data:
   SERVICE_PORT: "8080"
-  POSTGRES_CONNECTION: "dbname=postgres host=postgres password=postgres user=postgres sslmode=disable port=5432"
+  POSTGRES_CONNECTION: "dbname=postgres host=localhost password=postgres user=postgres sslmode=disable port=5432"
